--- a/static/css/dispatch/schedule.css
+++ b/static/css/dispatch/schedule.css
@@ -211,10 +211,6 @@
 
 
 
-.popupContainer {
-    width: 100rem;
-    height: 62rem;
-}
 
 .popupContainer {
     position: fixed;
@@ -225,12 +221,13 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 64rem;
+    width: 100rem;
     min-height: 19.6rem;
     background-color: white;
     box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
     transform: translate(-50%, -50%);
 }
+
 
 .PopupTitle {
     display: flex;
@@ -244,13 +241,11 @@
 }
 
 .PopupDataArea {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     width: 100%;
     height: calc(100% - 10.8rem);
-    padding: 4.2rem 3rem 3rem 3rem;
+    padding: 0 2rem;
     box-sizing: border-box;
+    padding-top: 3rem;
 }
 
 .PopupDataBox {
@@ -261,11 +256,11 @@
 }
 
 .PopupDataCell {
-        display: flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    width: 12rem;
+    width: 21rem;
     height: 6rem;
 }
 
@@ -283,6 +278,7 @@
 .shcedulePopupTableBox {
     width: 100%;
     height: 36rem;
+    padding: 3rem 0;
 }
 
 .shcedulePopupTableHeader {
@@ -398,8 +394,7 @@
     align-items: center;
     width: 100%;
     box-sizing: border-box;
-    padding: 3rem 3rem;
-    gap: 1rem;
+    height: 7.2rem;
 }
 
 .btnModules{
@@ -563,4 +558,13 @@
 .check {
     text-decoration: none;
     color: #0069D9;
+}
+
+
+.popupFooter {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
 }
