--- a/dispatch/templates/dispatch/regularly_connect_print.html
+++ b/dispatch/templates/dispatch/regularly_connect_print.html
@@ -12,10 +12,12 @@
 </head>
 
 <body>
-
     <div class="dispatchTable">
         <div class="dispatchTableHeader">
-            <div class="tilte">{{date|slice:':4'}}년 {{date|slice:'5:7'}}월 {{date|slice:'8:10'}}일 {{weekday}} - {{group.name}}</div>
+            <div class="changeBtn">
+                <input type="button" class="autoBtn" value="자동"/>
+            </div>
+            <div class="tilte"> {{date|slice:'5:7'}}월 {{date|slice:'8:10'}}일 {{weekday}} - {{group.name}}</div>
             <!-- 2022년 10월 18일 (화요일) - 한국 쓰리엠 출근 배차표 -->
             <div class="adminCheck">
                 <div class="checkLable">관리자 확인</div>
@@ -32,14 +34,15 @@
                     <td>연락처</td>
                     <td>시간</td>
                     <td>출근노선</td>
-                    <td>점호</td>
                     <td>정문/후문</td>
                     <td>셔틀</td>
-                    <td>서명</td>
-                    <td>출근시간</td>
+                    <td>기상</td>
+                    <td>차고지</td>
+                    <td>첫정류장</td>
                     <td>음주측정</td>
-                    <td>체온측정</td>
                     <td>제복</td>
+                    <td>배차확인</td>
+                    <td>서명</td>
                     <td>비고</td>
                 </tr>
             </thead>
@@ -54,7 +57,6 @@
                     <td>{{connect.driver_id.phone_num}}</td>
                     <td>{{order.departure_time}}</td>
                     <td>{{order.route}}</td>
-                    <td>{{order.departure}}</td>
                     <td>
                         {% if '정문' in order.location %}
                             정문
@@ -63,10 +65,23 @@
                         {% endif %}
                     </td>
                     <td>{% if '셔틀' in order.location %}O{% else %}X{% endif %}</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <span class="auto">{{connect.check_regularly_connect.wake_time}}</span>
+                    </td>
+                    <td>
+                        <span class="auto">{{connect.check_regularly_connect.drive_time}}</span>
+                    </td>
+                    <td>
+                        <span class="auto">{{connect.check_regularly_connect.departure_time}}</span>
+                    </td>
+                    <td>
+                        <span class="auto">{% if connect.alcohol_test != None %}{{connect.alcohol_test}}{% endif %}</span>
+                    </td>
+                    <td>
+                        <span class="auto"></span>
+                    </td>
+                    <td>
+                        <span class="auto">{% if connect.check_regularly_connect.connect_check == "1" %}O{% else %}X{% endif %}</span>
                     <td></td>
                     <td>{{order.references}}</td>
                 </tr>
@@ -75,7 +90,7 @@
                 <!-- 1페이지에 25줄 -->
             </tbody>
         </table>
-        <div class="page">1/2</div>
+        <div class="page"></div>
     </div>
 
 
