--- a/dispatch/templates/dispatch/roll_call.html
+++ b/dispatch/templates/dispatch/roll_call.html
@@ -23,6 +23,51 @@
         <div class="groupList">
             <div class="groupListBox">
                 <div class="groupListHead">
+                    <span class="groupListTitle">사업장</span>
+                    <div class="btnModules groupAddBtn">신규</div>
+                </div>
+                <div class="groupListBody">
+                    {% for business in business_list %}
+                    <div class="groupListItem">
+                        <div></div>
+                        <div class="groupNum groupOpen">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16.5" viewBox="0 0 22 16.5">
+                                <path class="Icon_awesome-folder" data-name="Icon awesome-folder"
+                                    d="M19.938,7.25h-8.25L8.938,4.5H2.063A2.062,2.062,0,0,0,0,6.563V18.938A2.062,2.062,0,0,0,2.063,21H19.938A2.062,2.062,0,0,0,22,18.938V9.313A2.062,2.062,0,0,0,19.938,7.25Z"
+                                    transform="translate(0 -4.5)" fill="#444" />
+                            </svg>
+                        </div>
+                        <div class="groupName groupOpen">
+                            <span class="{{business.id}}">{{business.name}}</span>
+                            <svg class="businessGroupEditBtn pointer" xmlns="http://www.w3.org/2000/svg" width="15" height="15.12" viewBox="0 0 15 15.12">
+                                <g data-name="그룹 1652" transform="translate(-683.5 -772.38)">
+                                  <g data-name="Icon feather-edit" transform="translate(684 773)">
+                                    <path data-name="패스 339" d="M9.262,6H4.392A1.392,1.392,0,0,0,3,7.392v9.741a1.392,1.392,0,0,0,1.392,1.392h9.741a1.392,1.392,0,0,0,1.392-1.392v-4.87" transform="translate(-3 -4.524)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"></path>
+                                    <path data-name="패스 340" d="M19.306,3.25a1.476,1.476,0,0,1,2.087,2.087l-6.61,6.61-2.783.7.7-2.783Z" transform="translate(-7.825 -2.818)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"></path>
+                                  </g>
+                                </g>
+                            </svg>
+                        </div>
+                        
+                    </div>
+                    <div class="detailItemBox">
+                        {% for group in business.regularly_groups.all %}
+                        <div class="detailItem {{route.id}}">
+                            <!--클래스에 노선 아이디 추가-->
+                            <div class="groupNum routeGap">
+                                <input class="groupCheckbox" id="businessGroup{{group.id}}" value="{{group.id}}" name="group_id" type="checkbox">
+                            </div>
+                            <label for="businessGroup{{group.id}}" class="routeNameBox">
+                                <div class="routeNumber">{{group.name}}</div>
+                            </label>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="groupListBox">
+                <div class="groupListHead">
                     <span class="groupListTitle">팀 목록</span>
                 </div>
                 <div class="groupListBody">
@@ -94,33 +139,46 @@
     </div>
 
     <div class="mainLayout">
-        <div class="searchBox">
-            <div class="routListSearch">
-                <div>
-                    <label for="pageSelect">분류</label>
-                    <select>
-                        <option>노선명</option>
-                        <option>차량번호</option>
-                        <option>이름</option>
-                    </select>
-                </div>
-                <input type="text" placeholder="노선명을 입력해주세요." value="{{search}}" name="search" class="searchInput">
+
+        <div class="searchBox routListSearch">
+            <div class="routListSearchDiv">
+                <label for="pageSelect">검색종류</label>
+                <select name="sorting">
+                    <option {% if sorting == "노선" %}selected{% endif %} value="노선">노선</option>
+                    <option {% if sorting == "팀" %}selected{% endif %} value="팀">팀</option>
+                    <option {% if sorting == "기사" %}selected{% endif %} value="기사">기사</option>
+                    <option {% if sorting == "차량" %}selected{% endif %} value="차량">차량</option>
+                </select>
+                <input type="text" value="{{search}}" name="search" class="searchInput">
                 <input value="{{date}}" autocomplete="off" type="date" name="date" class="searchDate" max="9999-12-31">
                 <input autocomplete="off" type="submit" class="btnModules searchBtn" value="검색">
+            </div>
+            <div class="routListSearchDiv">
+                <div class="btnModules printBtn" onclick="openLinePrint()">
+                    <span>노선별(A4)</span>
+                </div>
+                <div class="btnModules printBtn" onclick="openBusPrintA4()">
+                    <span>호수별(A4)</span>
+                </div>
+                <div class="btnModules printBtn" onclick="openBusPrintA3()">
+                    <span>호수별(A3)</span>
+                </div>
+                <div class="btnModules printBtn" onclick="openDrivingListPrint()">
+                    <span>운행일보(A4)</span>
+                </div>
+                <div class="btnModules routeInputScan">인쇄</div>
             </div>
         </div>
 
         <div class="RouteListForm teamSaveForm">
-            <div type="submit" class="btnModules routeInputScan"
-                onClick="opendispatchPrint('/dispatch/print/regularly/connect')">인쇄</div>
             <div class="RouteList">
 
-                <div class="RouteListForm teamSaveForm">
+                <div class="RouteListForm teamSaveForm RouteListInsideDiv">
                     <div class="RouteListHeadScroll">
                         <table class="RouteListHeader">
                             <thead>
                                 <tr>
-                                    <td><input type="checkbox"></td>
+                                    <td><input class="connectCheckAll" type="checkbox"></td>
                                     <td>순번</td>
                                     <td>노선명</td>
                                     <td>기사</td>
@@ -143,7 +201,7 @@
                                 {% for connect in connect_list %}
                                 <tr class="{{connect.id}} RouteListBodyTr">
                                     <td>
-                                        <input value="{{connect.id}}" name="id" type="checkbox">
+                                        <input class="connectCheck" value="{{connect.id}}" name="id" type="checkbox">
                                     </td>
                                     <td>{{forloop.counter}}</td>
                                     <td class="routeStatusPopupBtn">
@@ -153,7 +211,7 @@
                                         <div class="bluelink">{{connect.driver_id__name}}</div>
                                     </td>
                                     <td>{{connect.bus_id__vehicle_num}}</td>
-                                    <td>{% if connect.regularly_id__regularly_id__team == None %}{% else %}{{connect.regularly_id__regularly_id__team}}{% endif %}</td>
+                                    <td>{% if connect.regularly_id__regularly_id__team__name == None %}{% else %}{{connect.regularly_id__regularly_id__team__name}}{% endif %}</td>
                                     <td>{{connect.departure_date|slice:"11:16"}} ~ {{connect.arrival_date|slice:"11:16"}}</td>
                                     <td>{{connect.check_regularly_connect__wake_time}}</td>
                                     <td>{{connect.check_regularly_connect__drive_time}}</td>
@@ -178,6 +236,69 @@
 
 
 {% block popup %}
+<div class="popupAreaModules">
+    <div class="popupBgModules"></div>
+    <form action="{% url 'dispatch:business_edit' %}"  method="post">
+        {% csrf_token %}
+        <div class="popupContainer popupContainerDouble BusinessEntityPopupContainer">
+            <div class="popupHeader">
+                <div class="popupTitle">사업장 편집</div>
+            </div>
+            <div class="popupBody">
+                <div class="popupSection">
+                    <div class="popupArticleCategory">사업장 정보</div> 
+                    <input type="hidden" name="business_id" id="popupInputId">
+                    <div class="popupArticleBox">
+                        <div class="popupArticleDouble">
+                            <label for="" class="popupArticleLabel">순번</label>
+                            <input id="popupInputNumber" name="business_number" type="number" class="popupArticleinput" placeholder="숫자만 입력해 주세요">
+                        </div>
+                    </div>
+                    <div class="popupArticleBox">
+                        <div class="popupArticleDouble">
+                            <label for="" class="popupArticleLabel">사업장</label>
+                            <input id="popupInputName" name="business_name" type="text" class="popupArticleinput">
+                        </div>
+                    </div>
+                    <div class="popupArticleCategory">출/퇴근 그룹 목록</div>                
+                    <div class="popupArticleBoxTable">
+                        <div class="scrolling_table-list_header">
+                            <table class="table-list">
+                            <thead>
+                                <tr class="table-list_head-tr">
+                                <td class="table-list_head-tr_td">선택</td>
+                                <td class="table-list_head-tr_td">그룹</td>
+                                </tr>
+                            </thead>
+                            </table>
+                        </div>
+                        <div class="scrolling_table-list_body">
+                            <table class="table-list waypointTable">
+                            <tbody>
+                                {% for group in group_list %}
+                                <tr class="table-list_body-tr">
+                                    <td class="table-list_body-tr_td">
+                                        <input class="businessPopupGroupId" id="group_{{group.id}}" name="group_id" value="{{group.id}}" type="checkbox">
+                                    </td>
+                                    <td class="table-list_body-tr_td">
+                                        <label class="tableLabel pointer" for="group_{{group.id}}">{{group.name}}</label>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="popupFooter">
+                    <input class="btnModules addtionalBtn" value="저장" type="submit"/>
+                    <div class="btnModules businessPopupCloseBtn waypointCloseBtn">닫기</div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+
 <div class="popupAreaModules popup1">
     <div class="popupBgModules"></div>
     <form class="popupContainer">
@@ -275,7 +396,7 @@
             </div>
             <div class="popupFooter">
                 <div class="PopupunderBtnBox">
-                    <div class="btncloseModules">닫기</div>
+                    <div class="btn-close btncloseModules">닫기</div>
                 </div>
             </div>
         </div>
@@ -354,11 +475,64 @@
     {% autoescape off %}
     const searchTeamList = {{search_team_list}}
     const searchTimeList = {{search_time_list}}
+    const searchGroupList = {{search_group_list}}
+    const businessGroupData = {{business_group_data}}
+    const businessData = 
+    {
+        {% for business in business_list %}
+        "{{business.id}}" : {
+            "name" : "{{business.name}}",
+            "number" : "{{business.number}}",
+        },
+        {% endfor %}
+    }
+
     {% endautoescape %}
 
     const ROUTE_STATUS_URL =  "{% url 'dispatch:roll_call_route_status' %}"
     const DRIVER_STATUS_URL =  "{% url 'dispatch:roll_call_driver_status' %}"
+    const DISPATCH_PRINT_URL = "{% url 'dispatch:regularly_connect_print' %}"
+
+    
+</script>
+<script>
+    const thisDateData = document.querySelector('.searchDate').value
+
+    function openLinePrint(url) {
+        if(thisDateData !== ""){
+            targetLink = `{% url 'dispatch:line_print' %}?date=${thisDateData}`
+            window.open(targetLink, "노선별A4", "width=800, height=640")
+        }else{
+            alert("날짜를 선택해 주세요.")
+        }
+    }
+    function openBusPrintA4(url) {
+        if(thisDateData !== ""){
+            targetLink = `{% url 'dispatch:bus_print' %}?date=${thisDateData}&size=A4`
+            window.open(targetLink, "호수별A4", "width=1170, height=640")
+        }else{
+            alert("날짜를 선택해 주세요.")
+        }
+    }
+    function openBusPrintA3(url) {
+        if(thisDateData !== ""){
+            targetLink = `{% url 'dispatch:bus_print' %}?date=${thisDateData}&size=A3`
+            window.open(targetLink, "호수별A3", "width=1660, height=640")
+        }else{
+            alert("날짜를 선택해 주세요.")
+        }
+    }
+    function openDrivingListPrint(url) {
+        console.log(thisDateData);
+        if(thisDateData !== ""){
+            targetLink = `{% url 'dispatch:daily_driving_list' %}?date=${thisDateData}`
+            window.open(targetLink, "운행일보A4", "width=1200, height=640")
+        }else{
+            alert("날짜를 선택해 주세요.")
+        }
+    }
 </script>
 <script src="{% static 'js/dispatch/regularly/rollCallSearch.js' %}"></script>
 <script type="module" src="{% static 'js/dispatch/regularly/rollCallPopup.js' %}"></script>
+<script type="module" src="{% static 'js/dispatch/regularly/regularlyConnectPopup.js' %}"></script>
 {% endblock %}
